VTK-1166 fixes spacing in breadcrumb from 3 -> 3.5

--- a/src/main/resources/web/themes/default/basic.css
+++ b/src/main/resources/web/themes/default/basic.css
@@ -191,7 +191,7 @@ div.breadcrumb {
 	margin-bottom: 10px;
 	font-size: 80%;
 	background: whitesmoke;
-	padding: 3px 3px 3px 7px;
+	padding: 3.5px 3px 3.5px 7px;
 }
 
 div.breadcrumb ul {
